fdo#46757 Word/character count incorrect with record changes enabled

We were ignoring redlined (deleted) text when counting characters, but not when counting
words or characters without spaces. We now mask all redlined/hidden content from the
expanded node text before operating on it.

Change-Id: If882a6dde883a2ba0ca99909ca7ac2b9abd4a1fb